// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for saleswings's submitIdentifyEvent destination action: all fields 1`] = `
Object {
  "anonymousID": "anonId1234",
  "data": "peter@example.com",
  "email": "peter@example.com",
  "kind": "Identify",
  "timestamp": "2022-12-18T13:46:53.652Z",
  "url": "MrDZodCq([l&%Xby8@jL",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "userID": "user1234",
  "values": Object {
    "email": "peter@example.com",
  },
}
`;

exports[`Testing snapshot for saleswings's submitIdentifyEvent destination action: required fields 1`] = `
Object {
  "anonymousID": "anonId1234",
  "data": "peter@example.com",
  "email": "peter@example.com",
  "kind": "Identify",
  "timestamp": "2022-12-18T13:46:53.632Z",
  "url": "https://segment.com/academy/",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "userID": "user1234",
  "values": Object {
    "email": "peter@example.com",
  },
}
`;
